<resources>
    <string name="app_name">Android Basics</string>
    <string name="app_title">Pizza Asker</string>
    <string name="email">Email</string>
    <string name="hint_email">seu email aqui</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="hint_password">sua senha aqui</string>
    <string name="login">Entrar</string>
    <string name="register_1">Não tem cadastro?</string>
    <string name="register_2">Pressione aqui!</string>
    <string name="password_recover_title">Recuperação de senha</string>
    <string name="recover">Recuperar</string>
    <string name="register">Cadastrar</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="full_name">Nome completo</string>
    <string name="menu_home">Início</string>
    <string name="menu_history">Histórico</string>
    <string name="pizza_name">Nome da pizza</string>
    <string name="pizza_size">Tamanho</string>
    <string name="pizza_border">Borda</string>
    <string name="pizza_image">Imagem da pizza</string>
    <string name="content">content</string>
    <string name="select_pizza">Selecione a pizza</string>
    <string name="select_size">Selecione o tamanho</string>
    <string name="select_border">Selecione a borda</string>
    <string name="circle">Círculo</string>
    <string name="select">Selecionar</string>
    <string name="open_drawer">Abrir menu</string>
    <string name="close_drawer">Fechar menu</string>
    <string name="tutorial_title_1">Título 1</string>
    <string name="tutorial_title_2">Título 2</string>
    <string name="tutorial_title_3">Título 3</string>
    <string name="tutorial_subtitle_1">Subtítulo 1</string>
    <string name="tutorial_subtitle_2">Subtítulo 2</string>
    <string name="tutorial_subtitle_3">Subtítulo 3</string>
    <string name="tutorial_desc_1">Descrição 1 Descrição 1 Descrição 1 Descrição 1 Descrição 1 V Descrição 1 Descrição 1 Descrição 1 Descrição 1</string>
    <string name="tutorial_desc_2">Descrição 2</string>
    <string name="tutorial_desc_3">Descrição 3</string>
    <string name="tutorial_image_1">Tutorial imagem 1</string>
    <string name="tutorial_image_2">Tutorial imagem 2</string>
    <string name="tutorial_image_3">Tutorial imagem 3</string>
    <string name="tutorial_button">Comece agora</string>

    <string-array name="pizzas">
        <item>Margherita</item>
        <item>Romeu e julieta</item>
        <item>Milho</item>
    </string-array>

    <string-array name="sizes">
        <item>Grande</item>
        <item>Brotinho</item>
        <item>Gigante</item>
    </string-array>

    <string-array name="borders">
        <item>Catupiri</item>
        <item>Chocolate</item>
        <item>Sem borda</item>
    </string-array>
</resources>
