<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="#92aebf"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/tutorial_title_3" />

    <ImageView
        android:src="@drawable/tutorial_img_3"
        android:layout_width="148dp"
        android:layout_height="136dp"
        android:layout_marginTop="88dp"
        android:layout_gravity="center"
        android:contentDescription="@string/tutorial_image_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#434343"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:text="@string/tutorial_subtitle_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#878787"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/tutorial_desc_3"/>

</LinearLayout>