<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:baselineAligned="false">

        <ImageView
            android:layout_gravity="start|center_vertical"
            android:layout_width="0dp"
            android:layout_height="330dp"
            android:src="@drawable/home_circle"
            android:layout_weight="1"
            android:contentDescription="@string/circle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginTop="60dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/txt_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textSize="40sp"
                android:textColor="@color/gray"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_pizza"
                android:onClick="showPizzas"
                android:textSize="@dimen/home_font_small"
                android:textColor="@color/home_font_color"
                android:layout_marginTop="34dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:onClick="showPizzas"
                android:textSize="@dimen/home_font_big"
                android:textColor="@color/home_font_color"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_size"
                android:onClick="showPizzas"
                android:textSize="@dimen/home_font_small"
                android:textColor="@color/home_font_color"
                android:layout_marginTop="19dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:onClick="showSizes"
                android:textSize="@dimen/home_font_big"
                android:textColor="@color/home_font_color"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_border"
                android:onClick="showPizzas"
                android:textSize="@dimen/home_font_small"
                android:textColor="@color/home_font_color"
                android:layout_marginTop="19dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:onClick="showBorders"
                android:textSize="@dimen/home_font_big"
                android:textColor="@color/home_font_color"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/ic_phone"
        android:scaleType="center"
        app:backgroundTint="#53cdae"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="68dp" />
</FrameLayout>
