<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="23sp"
        android:textColor="@color/gray"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_logo"
        android:text="@string/full_name"
        android:textSize="@dimen/label_font_size"
        android:textColor="@color/gray"
        android:layout_marginTop="78dp"
        android:layout_alignStart="@id/txt_name_value"
        android:layout_alignLeft="@id/txt_name_value"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_name_value"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:inputType="textCapWords"
        android:textColor="#393939"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:imeOptions="actionNext"
        android:layout_below="@+id/txt_name"
        android:background="@drawable/shape_input_round" />

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name_value"
        android:text="@string/email"
        android:textSize="@dimen/label_font_size"
        android:textColor="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@id/txt_user_login"
        android:layout_alignLeft="@id/txt_user_login"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_user_login"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:inputType="textEmailAddress"
        android:textColor="#393939"
        android:textColorHint="@color/gray"
        android:textSize="13sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:imeOptions="actionNext"
        android:layout_below="@+id/txt_user"
        android:background="@drawable/shape_input_round" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_user_login"
        android:text="@string/password"
        android:textSize="@dimen/label_font_size"
        android:textColor="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/txt_password2"
        android:layout_alignLeft="@+id/txt_password2"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_password2"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:inputType="textPassword"
        android:textSize="13sp"
        android:textColor="#393939"
        android:textColorHint="@color/gray"
        android:maxLength="50"
        android:imeOptions="actionDone"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_below="@id/txt_password"
        android:background="@drawable/shape_input_round"/>

    <TextView
        android:id="@+id/txt_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password2"
        android:text="@string/confirm_password"
        android:textSize="@dimen/label_font_size"
        android:textColor="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_alignStart="@+id/txt_password2"
        android:layout_alignLeft="@+id/txt_password2"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_password_confirm2"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:inputType="textPassword"
        android:textSize="13sp"
        android:textColor="#393939"
        android:textColorHint="@color/gray"
        android:maxLength="50"
        android:imeOptions="actionDone"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_below="@id/txt_password_confirm"
        android:background="@drawable/shape_input_round"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txt_password_confirm2"
        android:layout_marginTop="24dp"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:background="@drawable/shape_button_login" />
</RelativeLayout>